--- a/configs/rgb+d.yaml
+++ b/configs/rgb+d.yaml
@@ -10,7 +10,7 @@ class_id_csv: /home/hatch5o6/groups/grp_asl_classification/nobackup/archive/AUTS
 seed: 4000
 
 n_gpus: 4
-device: cpu
+device: cuda
 
 pretrained_learning_rate: 5e-05
 new_learning_rate: 1e-04
