--- a/configs/rgb+d.yaml
+++ b/configs/rgb+d.yaml
@@ -2,10 +2,10 @@ save: /home/hatch5o6/nobackup/archive/CS650R/asl/rgb+d
 test_checkpoint: null
 modalities: ["rgb", "depth"]
 
-train_csv: /home/hatch5o6/CS650R/asl/data/train.csv
-val_csv: /home/hatch5o6/CS650R/asl/data/val.csv
-test_csv: /home/hatch5o6/CS650R/asl/data/test.csv
-class_id_csv: /home/hatch5o6/groups/grp_asl_classification/nobackup/archive/AUTSL/class_ids/SignList_ClassId_TR_EN.csv
+train_csv: data/train.csv
+val_csv: data/val.csv
+test_csv: data/test.csv
+class_id_csv: ~/groups/grp_asl_classification/nobackup/archive/AUTSL/class_ids/SignList_ClassId_TR_EN.csv
 
 seed: 4000
 
