--- a/configs/rgb+d.yaml
+++ b/configs/rgb+d.yaml
@@ -1,4 +1,4 @@
-save: /home/hatch5o6/nobackup/archive/CS650R/asl/rgb+d
+save: /home/hatch5o6/groups/grp_asl_classification/nobackup/archive/SLR/models/rgb+d
 test_checkpoint: null
 modalities: ["rgb", "depth"]
 
@@ -36,3 +36,5 @@ bert_hidden_dim: 256
 bert_att_heads: 4
 bert_intermediate_size: 512
 classifier_dropout: 0.1
+
+gradient_clip_val: 1.0
