--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,54 @@
+absl-py==2.3.1
 addict==2.4.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+alembic==1.17.2
+async-timeout==5.0.1
+attrs==25.4.0
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
 chumpy==0.70
+colorlog==6.10.1
 contourpy==1.3.2
 cycler==0.12.1
 Cython==3.1.6
+decord==0.6.0
 filelock==3.20.0
+flatbuffers==25.9.23
 fonttools==4.60.1
+frozenlist==1.8.0
 fsspec==2025.9.0
+greenlet==3.2.4
+grpcio==1.76.0
+hf-xet==1.2.0
+huggingface-hub==0.36.0
+idna==3.11
+jax==0.6.2
+jaxlib==0.6.2
 Jinja2==3.1.6
 joblib==1.5.2
 json-tricks==3.17.3
 kiwisolver==1.4.9
+lightning==2.5.5
+lightning-utilities==0.15.2
+Mako==1.3.10
+Markdown==3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 matplotlib==3.10.7
 mdurl==0.1.2
+mediapipe==0.10.21
+ml_dtypes==0.5.3
 mmcv-lite==2.0.0
 mmengine==0.10.7
 mmpose==1.2.0
 mpmath==1.3.0
+multidict==6.7.0
 munkres==1.1.4
 networkx==3.4.2
-numpy==2.2.6
+numpy==1.26.4
 nvidia-cublas-cu12==12.8.4.1
 nvidia-cuda-cupti-cu12==12.8.90
 nvidia-cuda-nvrtc-cu12==12.8.93
@@ -36,28 +64,50 @@ nvidia-nccl-cu12==2.27.5
 nvidia-nvjitlink-cu12==12.8.93
 nvidia-nvshmem-cu12==3.3.20
 nvidia-nvtx-cu12==12.8.90
+opencv-contrib-python==4.11.0.86
 opencv-python==4.12.0.88
+opt_einsum==3.4.0
+optuna==4.6.0
+optuna-integration==4.6.0
 packaging==25.0
 pillow==12.0.0
 platformdirs==4.5.0
+propcache==0.4.1
+protobuf==4.25.8
+pycparser==2.23
 Pygments==2.19.2
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
+pytorch-lightning==2.5.5
 PyYAML==6.0.3
+regex==2025.10.23
+requests==2.32.5
 rich==14.2.0
+safetensors==0.6.2
 scikit-learn==1.7.2
 scipy==1.15.3
+sentencepiece==0.2.1
 six==1.17.0
+sounddevice==0.5.3
+SQLAlchemy==2.0.44
 sympy==1.14.0
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
 termcolor==3.1.0
 threadpoolctl==3.6.0
+tokenizers==0.22.1
 tomli==2.3.0
 torch==2.9.0
 torchaudio==2.9.0
+torchmetrics==1.8.2
 torchvision==0.24.0
 tqdm==4.67.1
+transformers==4.57.1
 triton==3.5.0
 typing_extensions==4.15.0
+urllib3==2.5.0
+Werkzeug==3.1.3
 xtcocotools==1.14.3
 yapf==0.43.0
+yarl==1.22.0
 youtube-dl==2021.12.17
