--- a/configs/rgb+d.yaml
+++ b/configs/rgb+d.yaml
@@ -1,6 +1,7 @@
 save: /home/hatch5o6/groups/grp_asl_classification/nobackup/archive/SLR/models/rgb+d
 test_checkpoint: null
 modalities: ["rgb", "depth"]
+joint_pruning: True
 
 train_csv: data/train.csv
 val_csv: data/val.csv
@@ -34,8 +35,9 @@ depth_patch_size: 16
 bert_hidden_layers: 4
 bert_hidden_dim: 256
 bert_att_heads: 4
-bert_intermediate_size: 512
-num_pose_points: 543 # can edit
+bert_intermediate_size: 1024
+num_pose_points: 543
+init_keep_probability: 0.9
 classifier_dropout: 0.1
 
 gradient_clip_val: 1.0
