--- a/configs/s_jpFalse_TSLFormer_config.yaml
+++ b/configs/s_jpFalse_TSLFormer_config.yaml
@@ -1,7 +1,7 @@
-save: /home/hatch5o6/groups/grp_asl_classification/nobackup/archive/SLR/models/rgb+d
+save: /home/hatch5o6/groups/grp_asl_classification/nobackup/archive/SLR/models/s_jpFalse_TSLFormer_config
 test_checkpoint: null
-modalities: ["rgb", "depth"]
-joint_pruning: True
+modalities: ["skeleton"]
+joint_pruning: False
 
 train_csv: data/train.csv
 val_csv: data/val.csv
@@ -32,11 +32,11 @@ depth_hidden_layers: 6
 depth_att_heads: 6
 depth_intermediate_size: 1536
 depth_patch_size: 16
-bert_hidden_layers: 4
-bert_hidden_dim: 256
+bert_hidden_layers: 2
+bert_hidden_dim: 512
 bert_att_heads: 4
-bert_intermediate_size: 1024
-bert_dropout: 0.0
+bert_intermediate_size: 2048
+bert_dropout: 0.2
 num_pose_points: 543
 init_keep_probability: 0.9
 classifier_dropout: 0.1
